using orgmode in emacs to practice python scripting

--- a/pylessons.org
+++ b/pylessons.org
@@ -1,6 +1,13 @@
 * Basics
-#+BEGIN_SRC python
+#+BEGIN_SRC python :results output
   print("Hello world")
+#+END_SRC
+
+#+RESULTS:
+: Hello world
+* Python Basics
+#+BEGIN_SRC python :results output
+print(1+4)
 #+END_SRC
 
 #+RESULTS:
